Update 'vwdvoscos-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:b4d5fac37865d1f2e59d016ae8101bd589795599@sha256:84aacbb1b69635fd1088523d0ee567d2f79f603351fb52e3a36ffced8fec0c0e

--- a/components/vwdvoscos-go/overlays/development/deployment-patch.yaml
+++ b/components/vwdvoscos-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vwdvoscos-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:b4d5fac37865d1f2e59d016ae8101bd589795599@sha256:84aacbb1b69635fd1088523d0ee567d2f79f603351fb52e3a36ffced8fec0c0e
+          name: container-image
